...
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_recipe_detail_ingredients_recipe_description"
        style="@style/CardTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="@dimen/small_screen_card_buffer"

...
        android:padding="@dimen/small_screen_card_buffer"
        tools:text="@string/recipe_description"
        />
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_recipe_detail_list"
        >

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
