...

                <Button
                    android:layout_width="@dimen/step_button_width"
                    android:layout_marginLeft="@dimen/small_screen_card_buffer"
                    android:layout_height="@dimen/step_button_height"

                    android:id="@+id/previous_step_button"
                    android:background="@drawable/ic_arrow_back_24dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
...
                    android:text="@string/next_step"/>
                <Button
                    android:layout_width="@dimen/step_button_width"
                    android:layout_marginRight="@dimen/small_screen_card_buffer"
                    android:layout_height="@dimen/step_button_height"

                    android:id="@+id/next_step_button"
                    android:background="@drawable/ic_arrow_forward_24dp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>

