<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.petemit.example.android.bakingapp.MainActivity">

 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="@dimen/small_screen_card_buffer"
     android:layout_marginLeft="@dimen/small_screen_card_buffer"
     android:layout_marginRight="@dimen/small_screen_card_buffer"
     android:text="@string/internet_error_msg"
     android:visibility="gone"
     android:id="@+id/internet_error_msg"
     style="@style/StepTextStyleBig"/>

 <android.support.v7.widget.RecyclerView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/rv_recipe_list"
    >

 </android.support.v7.widget.RecyclerView>

</LinearLayout>
